--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -46,10 +46,6 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.1"
   },
-  "homepage": "https://your-github-username.github.io/your-repo-name",
-"scripts": {
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d build"
-}
+  "homepage": "https://goodmaker322.github.io/tranquangdam"
 
 }
